--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "require": {
         "php": "^7.2",
         "topthink/framework": "^6.0.0",
-        "topthink/think-orm": "^2.0"
+        "topthink/think-orm": "^2.0",
+        "guzzlehttp/guzzle":"^6.0.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
