--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "php": "^7.2",
         "topthink/framework": "^6.0.0",
         "topthink/think-orm": "^2.0",
-        "guzzlehttp/guzzle":"^6.0.0"
+        "guzzlehttp/guzzle":"^6.0.0",
+      "ext-gd": "*"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
